WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113785
[CoordGfx] Background color should not be part of GraphicsLayerState
https://bugs.webkit.org/show_bug.cgi?id=113785
Summary
[CoordGfx] Background color should not be part of GraphicsLayerState
Balazs Kelemen
Reported
2013-04-02 08:24:47 PDT
The background is not part of the flushing process, we can send it ASAP.
Attachments
Patch
(5.55 KB, patch)
2013-04-02 08:34 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2013-04-02 08:34:18 PDT
Created
attachment 196147
[details]
Patch
Noam Rosenthal
Comment 2
2013-04-02 08:43:27 PDT
Comment on
attachment 196147
[details]
Patch LGTM, please get sign off from WK2 owner.
WebKit Commit Bot
Comment 3
2013-04-13 09:55:51 PDT
Comment on
attachment 196147
[details]
Patch Rejecting
attachment 196147
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--non-interactive', 196147, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://webkit-queues.appspot.com/results/97184
Balazs Kelemen
Comment 4
2013-04-15 05:02:20 PDT
Comment on
attachment 196147
[details]
Patch Landed in
http://trac.webkit.org/changeset/148430
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug