[CoordGfx] Background color should not be part of GraphicsLayerState https://bugs.webkit.org/show_bug.cgi?id=113785

Source/WebCore:

Page background is independent from layer state, send it to the UI
as soon as possible.

Should not cause observable change in behavior so no new tests.

* platform/graphics/texmap/coordinated/CoordinatedGraphicsScene.cpp:
(WebCore::CoordinatedGraphicsScene::commitSceneState):
* platform/graphics/texmap/coordinated/CoordinatedGraphicsState.h:

Source/WebKit2:

Reviewed by Andreas Kling.

Page background is independent from layer state, send it to the UI
as soon as possible.

* Shared/CoordinatedGraphics/CoordinatedGraphicsArgumentCoders.cpp:
(CoreIPC::::encode):
(CoreIPC::::decode):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::setBackgroundColor):

Canonical link: https://commits.webkit.org/132992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148430 268f45cc-cd09-0410-ab3c-d52691b4dbfc